# odbcclient

./: CMakeLists.txt  README.md  lexer.l  main.cpp  parser.y  scanner.hpp
hana/: odbcinst.ini
nanodbc/: nanodbc.cpp
queries/: bench.sql  clientload.sql  dbspace.sql  hana.sql
sapiq161/: odbcinst.ini
